--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 pandas = "^2.2.3"
 numpy = "^2.2.3"
+matplotlib = "^3.10.1"
 
 
 [tool.poetry.group.dev.dependencies]
